# snipersim-cxl

./: .gitignore  Makefile  Makefile.config  draw.ipynb  pin-log.txt  rebuild.sh  record-trace  run-sniper  test_memrw.cpp  test_syscall.cpp  test_time.cpp  testnotes.md
common/core/: core.cc  syscall_model.cc
common/core/memory_subsystem/: address_home_lookup.cc  address_home_lookup.h  memory_manager_base.cc  memory_manager_base.h  memory_manager_fast.h
common/core/memory_subsystem/directory_schemes/: coherency_protocol.h  directory.cc  directory.h
common/core/memory_subsystem/dram/: dram_cache.cc  dram_cntlr_interface.cc  dram_cntlr_interface.h
common/core/memory_subsystem/parametric_dram_directory_msi/: cache_cntlr.cc  cache_cntlr.h  memory_manager.cc  (+1 more)
common/misc/: stats.cc  stats.h  subsecond_time.h
common/performance_model/: dram_perf_model.cc  dram_perf_model.h  dram_perf_model_constant.cc  dram_perf_model_constant.h  dram_perf_model_normal.h  dram_perf_model_readwrite.cc  dram_perf_model_readwrite.h  performance_model.h
common/performance_model/cxl_hybrid/: dablooms.cc  dram_perf_model_hybrid.cc  dram_perf_model_hybrid.h  numa_balancer.cc  numa_balancer.h
common/performance_model/cxtnl_shim/: cuckoo_hashmap.hpp  cxtnl_shim.h  dablooms.cc  dablooms.h  dablooms.hpp  ep_agent.cc  ep_agent.h  murmur.h  trace_logger.hpp
common/system/: core_manager.cc  magic_client.cc  magic_server.cc  magic_server.h
common/trace_frontend/: trace_manager.cc  trace_thread.cc  trace_thread.h
config/: base.cfg  cxl_asplos.cfg  cxl_hybrid.cfg  e5-2680-cxl-lock.cfg  e5-2680-cxl.cfg  e5-2680-rdma-lock-hard.cfg  e5-2680-rdma-lock.cfg  e5-2680-rdma.cfg  e5-2680.cfg  gainestown_cxl.cfg  sapphire_cxl.cfg  skylake.cfg
docker/: Dockerfile-ubuntu-20.04  Makefile  docker-compose.yml
frontend/: frontend_control.tcc  frontend_options.tcc
frontend/pin-frontend/: pin_frontend.cc
frontend/pin-frontend/sift/: fixed_types.h  memcounter.cc  sift.h  sift_assert.h  sift_format.h  sift_reader.cc  sift_reader.h  sift_utils.cc  sift_utils.h  sift_writer.cc  sift_writer.h  siftdump.cc  zfstream.cc  zfstream.h
include/: sim_api.h
sift/: Makefile  Makefile.bu  memcounter  memcounter.cc  sift_reader.cc  sift_writer.cc  siftdump.cc
sift/recorder/: Makefile  emulation.cc  globals.h  recorder_base.cc  sift_recorder.cc
sift/recorder/sift/: fixed_types.h  memcounter.cc  sift.h  sift_assert.h  sift_format.h  sift_reader.cc  sift_reader.h  sift_utils.cc  sift_utils.h  sift_writer.cc  sift_writer.h  siftdump.cc  zfstream.cc  zfstream.h
standalone/: Makefile  standalone.cc
test/dvfs/: Makefile  dvfs  dvfs.c
test/spinloop/: spinloop
test/test-systime/: a.out
test/unit-test/: CMakeLists.txt  record_traces.sh  rw_test  rw_test.cc  test_ep_agent.cc  unit_test.cc
test/write-sync/: CMakeLists.txt  a.cpp  test_memrw.cpp
tools/: cpistack.py  cycle_dist.py  gen_memstatus.py  total_cycles.py
(+10 files in other folders)
